assets/main.css
body {
  /* Horizontally center everything. */
  margin: auto;
  /* Make sure the text can't start and stop exactly at the screen edges; leave some
   * space.
   */
  padding: 0 2mm;
  /* Set the maximum width in terms of the width of '0' in whatever font is used.  See
   * <https://developer.mozilla.org/en/docs/Web/CSS/length> and
   * <https://practicaltypography.com/line-length.html>.
   */
  max-width: 75ch;
  line-height: 1.4;
  /* Use the browser's default sans-serif font.  Don't impose anything more than that.
   * Someone could even set their default sans-serif font to a font with serifs.  When I
   * don't set `font-family` some browsers use a serif font by default, though.
   */
  font-family: sans-serif;
  /* See <https://developer.mozilla.org/en-US/docs/Web/CSS/text-rendering>. */
  text-rendering: optimizeLegibility;
  /* overflow-y: scroll; */
  overflow-x: hidden;
}

/* Fully justify text.  Also see <https://practicaltypography.com/hyphenation.html>. */
p {
  text-align: justify;
  /* See <http://caniuse.com/#search=hyphens>. */
  hyphens: auto;
}

sup {
  line-height: 0;
}

/* Make sure full justification is disabled for these elements. */
blockquote, blockquote > p, ul, ol, dl, h1, h2, h3, h4, h5, h6 {
  text-align: initial;
  hyphens: initial;
}

/* Headings.  Only <h1>, <h2>, and <h3> should be used [1].  Their styles are those most
 * browsers use for <h2>, <h3>, and <h4>, respectively [2].  Since I only want to use
 * three levels of headings, <h4>, <h5>, and <h6> aren't visually distinct from <h3>.
 *
 * There's some weirdness going on with <h1> font sizes in most browsers (e.g. Firefox and
 * Chrome): <h1> headings become gradually smaller the deeper they are nested in
 * <article>, <aside>, <nav>, and <section> (see [3] in Firefox and [4]).  I think it's
 * rooted in the HTML5 specification.  See [5].
 *
 * [1]: https://practicaltypography.com/headings.html
 * [2]: https://www.w3schools.com/tags/tag_hn.asp
 * [3]: view-source:resource://gre-resources/html.css
 * [4]: https://stackoverflow.com/q/22898559 "Why is H2 larger than H1?"
 * [5]: https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Using_HTML_sections_and_outlines#The_HTML5_outline_algorithm
 */
h1 {
  font-size: 1.5em;
  margin-top: 0.83em;
  margin-bottom: 0.83em;
}

h2 {
  font-size: 1.17em;
  margin-top: 1em;
  margin-bottom: 1em;
}

h3, h4, h5, h6 {
  font-size: 1.00em;
  margin-top: 1.33em;
  margin-bottom: 1.33em;
}

h1, h2 {
  font-variant: small-caps;
  /* See <https://practicaltypography.com/letterspacing.html>. */
  letter-spacing: 0.05em;
}

a {
  /* Only underline links on mouseover. */
  text-decoration: none;
  word-wrap: break-word;
}

a:hover {
   text-decoration: underline;
}

/* Set the size of monospace text relative to the normal font size.  See [1], [2], and
 * [3].  Make it smaller, but not as excessively as typical browser defaults [4].  Just
 * using the same size as for proportional fonts unfortunately looks pretty bad with the
 * default fonts of most browsers I looked at.
 *
 * [1]: http://code.stephenmorley.org/html-and-css/fixing-browsers-broken-monospace-font-handling/
 * [2]: https://stackoverflow.com/q/38781089
 *      "font-family: monospace, monospace"
 * [3]: https://meyerweb.com/eric/thoughts/2010/02/12/fixed-monospace-sizing/
 * [4]: https://www.brunildo.org/test/monospace_fsize.html
 *      "monospace default font-size"
 */
pre, code, kbd, samp, tt {
  font-family: monospace, monospace;
  font-size: .9375em; /* 15/16 */
  hyphens: none;
}

/* Don't reduce the font size of code blocks twice. */
pre > code {
  font-size: 1em;
}

div.highlighter-rouge {
  border-top: 2px solid #ccc;
  border-bottom: 2px solid #ccc;
  /* Only darken the background color of code blocks very slightly. */
  background-color: #f6f6f6;
  min-width: 100%;
  max-width: calc(50% + 50vw - 2mm);
  width: -moz-min-content;
  width: -webkit-min-content;
  margin: 1em -2mm;
  padding: 0 2mm;
  overflow-x: hidden;
}

pre {
  padding: .3em 0;
  margin: 0;
  overflow-x: auto;
}

pre > code {
  border: 0;
  padding-right: 0;
  padding-left: 0;
  background-color: #f6f6f6;
}

/* Inline code */
code {
  padding: .1em .2em;
  background-color: #eee;
}

/* Images may generally use the whole viewport width and aren't restricted to the line
 * length.  Exceptions in Markdown files can be made using span IALs [2].  There are no
 * margins for images.
 *
 * [1]: https://cloudfour.com/thinks/breaking-out-with-viewport-units-and-calc/
 *      "Breaking Out With Viewport Units and Calc"
 * [2]: https://kramdown.gettalong.org/syntax.html#span-ials
 */
img {
  display: block;
  max-width: 100vw;
  position: relative; /* This makes `left: 50vw` work. */
  left: 50vw;
  transform: translateX(-50%);
  margin-left: calc(-50vw + 50%);
  vertical-align: middle;
}

/* Class for images that disables most weird hacks. */
.normal-img {
  max-width: initial;
  position: initial;
  left: initial;
  transform: initial;
  margin-left: initial;
  vertical-align: initial;
}

/* Wrapper to make the following class work. */
.scrolled-img-wrapper {
  width: 100vw;
  margin-left: calc(-50vw + 50%);
  overflow-x: auto;
}

/* Class for images that shouldn't be scaled but instead have a horizontal scrollbar.
 * They are still centered on wide viewports.  The <img> element should be wrapped in a
 * <div> with the class `scrolled-img-wrapped`. */
.scrolled-img {
  display: block;
  /* Reset some properties set for <img> elements. */
  max-width: initial;
  position: initial;
  left: initial;
  transform: initial;
  vertical-align: initial;
  margin: 0 auto;
}

/* For images that shouldn't be (significantly) wider than the line length.  FIXME: I
 * think small images aren't centered. */
.confined-img {
  display: initial;
  max-width: calc(100% + 4mm);
  position: initial;
  left: initial;
  transform: initial;
  margin: 0 -2mm;
}
/* ... */

